make alert() returns parameter

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <div id="alert_modal">
         <span id="alert_modal_close">&times;</span>
         ALERT!
+        <div id="alert_function"></div>
         <div id="alert_message"></div>
       </div>
     </div>
