--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
       </div>
     <script src="./alert.js"></script>
     <script src="./script.js"></script>
+    <script src="./stack.js"></script>
   </body>
 </html>
