now you can add stack in console, debugging and step-by-step showing

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         </div>
       </div>
       <div id="event_loop">
+        <div id="debugger">
+        <button id="step_next">step next</button>
+        <button id="step_all">step all</button>
+      </div>
         <div id="call_stack"></div>
         <div id="web_api"></div>
         <div id="callback_queue"></div>
