add trash bag, stop propagation when drop

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <div id="error_message"></div>
         </div>
         <div class="playground"></div>
+        <div id="trash"></div>
       </div>
       <div id="execution">
         <div class="call_codes"></div>
